Fix an issue with the horizontal scrollbar appearing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -606,7 +606,7 @@ h2.no-results, h1.dashboard-header, .title {
     font-size: 1.4em;
     .intro {
       margin-top: -40px;
-      padding: 6.5em 0;
+      padding: 6.5em 15px;
       background-color: #324D5C;
       h1 {
         font-size: 2.3em;
